Load certificates delayed

Showing a dialog from a Paint event handler is something Qt doesn't like.

BUG: 472356